--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:h2:file:~/stapler;AUTO_SERVER=true
+spring.datasource.username=
+spring.datasource.password=
 
+spring.mustache.expose-request-attributes=true
